--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>2.0-1</version>
+        <version>2.0-2-SNAPSHOT</version>
     </parent>
     <artifactId>superfly-client</artifactId>
     <name>Superfly Client</name>
