--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!-- Удален устаревший родительский POM org.sonatype.oss:oss-parent -->
     <groupId>com.payneteasy.superfly</groupId>
     <artifactId>superfly-parent</artifactId>
     <packaging>pom</packaging>
@@ -79,14 +78,14 @@
     -->
     <distributionManagement>
         <repository>
-            <id>central</id>
-            <name>Central Repository</name>
-            <url>https://central.sonatype.com/api/v1/publisher</url>
+            <id>sonatype-nexus-staging</id>
+            <name>sonatype oss RELEASE repository</name>
+            <url>https://central.sonatype.com/service/local/staging/deploy/maven2</url>
         </repository>
         <snapshotRepository>
-            <id>central</id>
-            <name>Central Repository Snapshots</name>
-            <url>https://central.sonatype.com/api/v1/publisher</url>
+            <id>sonatype-nexus-snapshots</id>
+            <name>sonatype oss SNAPSHOT repository</name>
+            <url>https://central.sonatype.com/content/repositories/snapshots</url>
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
@@ -837,27 +836,6 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.11.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>3.1.1</version>
-                    <configuration>
-                        <tagNameFormat>sso-@{project.version}</tagNameFormat>
-                        <preparationGoals>clean verify</preparationGoals>
-                        <autoVersionSubmodules>true</autoVersionSubmodules>
-                        <pushChanges>false</pushChanges>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>3.3.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>3.4.0</version>
                 </plugin>
@@ -983,34 +961,6 @@
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <configuration>
-                            <source>${java.version}</source>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
                                 </goals>
                             </execution>
                         </executions>
